Implement basic render draw structure. Implement push uniforms to bindings

--- a/Iberus/Iberus.vcxproj
+++ b/Iberus/Iberus.vcxproj
@@ -152,6 +152,8 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Renderer\OpenGLRenderer\OpenGLRenderer.h" />
+    <ClInclude Include="src\Renderer\RenderCmd.h" />
     <ClInclude Include="src\Renderer\OpenGLRenderer\OpenGLShaderBindings.h" />
     <ClInclude Include="src\Renderer\ShaderBindings.h" />
     <ClInclude Include="src\Scene\Resources\Buffer.h" />
@@ -193,6 +195,8 @@
     <ClInclude Include="src\Scene\Scene.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Renderer\OpenGLRenderer\OpenGLRenderer.cpp" />
+    <ClCompile Include="src\Renderer\RenderCmd.cpp" />
     <ClCompile Include="src\Renderer\OpenGLRenderer\OpenGLShaderBindings.cpp" />
     <ClCompile Include="src\Renderer\ShaderBindings.cpp" />
     <ClCompile Include="src\Scene\Resources\Buffer.cpp" />
