Create base logic for ResourceManager and ResourceShader logic

--- a/Iberus/Iberus.vcxproj
+++ b/Iberus/Iberus.vcxproj
@@ -152,6 +152,9 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Scene\Resources\FileSystemProvider.h" />
+    <ClInclude Include="src\Scene\Resources\IProvider.h" />
+    <ClInclude Include="src\Scene\Resources\Shader.h" />
     <ClInclude Include="src\Renderer\RenderObject.h" />
     <ClInclude Include="src\Core\Engine.h" />
     <ClInclude Include="src\Scene\Resources\Resource.h" />
@@ -199,6 +202,9 @@
     <ClInclude Include="src\Scene\Scene.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Scene\Resources\FileSystemProvider.cpp" />
+    <ClCompile Include="src\Scene\Resources\IProvider.cpp" />
+    <ClCompile Include="src\Scene\Resources\Shader.cpp" />
     <ClCompile Include="src\Renderer\RenderObject.cpp" />
     <ClCompile Include="src\Core\Engine.cpp" />
     <ClCompile Include="src\Scene\Resources\Resource.cpp" />
